Update Barcode iOS SDK docs for release v1.7.3.

--- a/barcode-scanner-sdk/ios/release-history.html
+++ b/barcode-scanner-sdk/ios/release-history.html
@@ -389,10 +389,16 @@
 <h3 id='version-1-7-3-24-nov-2020' class='heading'>Version 1.7.3 (24 Nov 2020)</h3>
 
 <ul>
-<li>🚀 Improvements:</li>
+<li>🚀 Improvements:
+
+<ul>
 <li>Improved barcode and PDF417 detection</li>
-<li>🐞 Bug fixes</li>
+</ul></li>
+<li>🐞 Bug fixes
+
+<ul>
 <li>Fixed a rare crash in <code><a href="Classes/SBSDKUIBarcodesBatchScannerViewController.html">SBSDKUIBarcodesBatchScannerViewController</a></code>, that occurred after fetching updated data.<br></li>
+</ul></li>
 </ul>
 <h3 id='version-1-7-2-16-nov-2020' class='heading'>Version 1.7.2 (16 Nov 2020)</h3>
 
