android barcode sdk release v1.2.2

--- a/barcode-scanner-sdk/android/index.html
+++ b/barcode-scanner-sdk/android/index.html
@@ -556,7 +556,18 @@ e.g. JPG files from photo library or other sources.</p>
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
-<h3 id="version-121-3-dec-2020">Version 1.2.1 (3 Dec 2020)</h3>
+<h3 id="version-122-7-dec-2020">Version 1.2.2 (7 Dec 2020)</h3>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Fixed incorrect processing of the text part in DataMatrix barcodes with binary data</li>
+      <li>Fixed rare case of the QR-codes processing which might lead to crash</li>
+      <li>Some redundant logs were cut out</li>
+    </ul>
+  </li>
+</ul>
+
+<h4 id="version-121-3-dec-2020">Version 1.2.1 (3 Dec 2020)</h4>
 <ul>
   <li>🎉 New:
     <ul>
