--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -1053,12 +1053,51 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarin---version-320-10-dec-2020">ScanbotSDK.Xamarin - Version 3.2.0 (10 Dec 2020)</h4>
+
+<ul>
+  <li>🎉 NEW:
+    <ul>
+      <li>iOS: <code class="highlighter-rouge">BinarizationFilter</code> option when creating TIFF</li>
+    </ul>
+  </li>
+  <li>🚀 Improvements:
+    <ul>
+      <li>Improvements in the detection of barcodes, especially of the type PDF417. Better recognition of rotated and damaged PDF417 codes.</li>
+    </ul>
+  </li>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android: Fixed a bug with the size of generated PDF documents being too big.</li>
+    </ul>
+  </li>
+  <li>⚠️ Breaking changes:
+    <ul>
+      <li>iOS: Added support for image file encryption. ScannerViewController constructors now require an <code class="highlighter-rouge">SBSDKStorageCrypting</code> parameter.
+Pass <code class="highlighter-rouge">null</code> to continue existing behavior, or checkout the <a href="https://scanbotsdk.github.io/documentation/ios/">native iOS SDK documentation</a> 
+on how to implement the encryption.</li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Android: Upgraded the native Scanbot Android SDK to <strong>v1.76.2</strong></li>
+      <li>iOS: Upgraded the native Scanbot iOS SDK to <strong>v1.12.1</strong></li>
+    </ul>
+  </li>
+  <li>👉 Please also see:
+    <ul>
+      <li>The <a href="https://github.com/doo/scanbot-sdk-example-android/wiki/Release-History">Changelog</a> of the native Scanbot Android SDK</li>
+      <li>The <a href="https://scanbotsdk.github.io/documentation/ios/release-history.html">Changelog</a> of the native Scanbot iOS SDK</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin---version-313-13-nov-2020">ScanbotSDK.Xamarin - Version 3.1.3 (13 Nov 2020)</h4>
 
 <ul>
   <li>🐞 Bug fixes:
     <ul>
-      <li>Android: Fixed rendering of the PDF without OCR for PNG storage format</li>
+      <li>Android: Camera component optimization fix</li>
     </ul>
   </li>
   <li>🚙 Under the hood:
