--- a/barcode-scanner-sdk/android/index.html
+++ b/barcode-scanner-sdk/android/index.html
@@ -556,13 +556,24 @@ e.g. JPG files from photo library or other sources.</p>
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
-<h3 id="version-130-17-dec-2020">Version 1.3.0 (17 Dec 2020)</h3>
+<h3 id="version-131-12-jan-2021">Version 1.3.1 (12 Jan 2021)</h3>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Fixed a concurrency issue (<code class="highlighter-rouge">RejectedExecutionException</code>) for the frame handling in <code class="highlighter-rouge">CameraView</code></li>
+      <li>Fixed a double scan issue for <code class="highlighter-rouge">BarcodeScannerActivity</code> RTU screen</li>
+      <li>Fixed a <code class="highlighter-rouge">ShutterButton</code> animation</li>
+    </ul>
+  </li>
+</ul>
+
+<h4 id="version-130-17-dec-2020">Version 1.3.0 (17 Dec 2020)</h4>
 <ul>
   <li>🎉 New:
     <ul>
       <li>Added Front Facing Camera support (BETA). Call <code class="highlighter-rouge">setCameraModule(CameraModule.FRONT)</code> in <code class="highlighter-rouge">ScanbotCameraView</code> or <code class="highlighter-rouge">ScanbotCameraXView</code> to enable it.</li>
       <li>Added <code class="highlighter-rouge">CAMERA_MODULE</code> configuration parameter for RTU screens</li>
-      <li>Added <code class="highlighter-rouge">setDetectorType</code> configuration parameter for barcode scanner and related RTU UI screens. It allows to disable model-based detection which might be helpful to increase the perfomance in some cases</li>
+      <li>Added <code class="highlighter-rouge">setDetectorType</code> configuration parameter for barcode scanner and related RTU UI screens. It allows to disable model-based detection which might be helpful to increase the performance in some cases</li>
     </ul>
   </li>
   <li>🚀 Improvements:
@@ -583,7 +594,7 @@ e.g. JPG files from photo library or other sources.</p>
   </li>
 </ul>
 
-<h3 id="version-122-7-dec-2020">Version 1.2.2 (7 Dec 2020)</h3>
+<h4 id="version-122-7-dec-2020">Version 1.2.2 (7 Dec 2020)</h4>
 <ul>
   <li>🐞 Bug fixes:
     <ul>
