--- a/cordova/index.html
+++ b/cordova/index.html
@@ -2885,6 +2885,15 @@ please add the following rules:</p>
 <p><a name="releaseHistory"></a></p>
 <h2 id="release-history">Release History</h2>
 
+<h4 id="version-462-21-jan-2021">Version 4.6.2 (21 Jan 2021):</h4>
+<ul>
+  <li>🚀 Improvements:
+    <ul>
+      <li>Added failsafe for ScanbotSDK iOS download script</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="version-461-14-jan-2021">Version 4.6.1 (14 Jan 2021):</h4>
 <ul>
   <li>🚀 Improvements:
