--- a/flutter/index.html
+++ b/flutter/index.html
@@ -836,6 +836,13 @@ If multi-page mode is not enabled and <code class="highlighter-rouge">result.sta
 
   <span class="kt">String</span> <span class="n">cameraUnavailableExplanationText</span><span class="o">;</span>
 
+  <span class="c1">/// Title of the button that opens the screen where the user can allow</span>
+  <span class="c1">/// the usage of the camera by the app.</span>
+  <span class="kt">String</span> <span class="n">enableCameraButtonTitle</span><span class="o">;</span>
+
+  <span class="c1">/// Text that will be displayed when the app is not allowed to use the camera,</span>
+  <span class="c1">/// prompting the user to enable the usage of the camera.</span>
+  <span class="kt">String</span> <span class="n">enableCameraExplanationText</span><span class="o">;</span>
 </code></pre></div></div>
 
 <p><a name="module_ScanbotSdkUi.startCroppingScreen"></a></p>
@@ -2173,6 +2180,16 @@ It allows you to create and distribute dedicated and smaller APKs <strong>via Pl
 
 <p><a name="releaseHistory"></a></p>
 <h2 id="release-history-and-changelog">Release History and Changelog</h2>
+
+<h3 id="version-221-12-feb-2021">Version 2.2.1 (12 Feb 2021)</h3>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Added missing permission text properties <code class="highlighter-rouge">enableCameraButtonTitle</code>
+ and <code class="highlighter-rouge">enableCameraExplanationText</code> to <code class="highlighter-rouge">DocumentScannerConfiguration</code></li>
+    </ul>
+  </li>
+</ul>
 
 <h3 id="version-220-12-feb-2021">Version 2.2.0 (12 Feb 2021)</h3>
 <ul>
