--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -1053,6 +1053,15 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarin---version-321-15-feb-2021">ScanbotSDK.Xamarin - Version 3.2.1 (15 Feb 2021)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>iOS: Fixed storage issue when creating PDFs or performing OCR</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin---version-320-10-dec-2020">ScanbotSDK.Xamarin - Version 3.2.0 (10 Dec 2020)</h4>
 
 <ul>
@@ -1097,7 +1106,7 @@ on how to implement the encryption.</li>
 <ul>
   <li>🐞 Bug fixes:
     <ul>
-      <li>Android: Camera component optimization fix</li>
+      <li>Android: Fixed rendering of the PDF without OCR for PNG storage format</li>
     </ul>
   </li>
   <li>🚙 Under the hood:
