--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -487,6 +487,20 @@ If a scanned document has a lot white background, that will be considered a very
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarinforms---version-321-15-feb-2021">ScanbotSDK.Xamarin.Forms - Version 3.2.1 (15 Feb 2021)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Forms.iOS: Fixed storage issue when creating PDFs or performing OCR</li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Upgraded <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> to v3.2.1</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms---version-320-10-dec-2020">ScanbotSDK.Xamarin.Forms - Version 3.2.0 (10 Dec 2020)</h4>
 
 <ul>
