--- a/barcode-scanner-sdk/ios/Classes/SBSDKSwissQRCodeDocumentField.html
+++ b/barcode-scanner-sdk/ios/Classes/SBSDKSwissQRCodeDocumentField.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>SBSDKIDCardPDF417DocumentField Class Reference</title>
+    <title>SBSDKSwissQRCodeDocumentField Class Reference</title>
     <link rel="stylesheet" type="text/css" href="../css/jazzy.css" />
     <link rel="stylesheet" type="text/css" href="../css/highlight.css" />
     <meta charset="utf-8">
@@ -14,9 +14,9 @@
   </head>
   <body>
 
-    <a name="//apple_ref/objc/Class/SBSDKIDCardPDF417DocumentField" class="dashAnchor"></a>
+    <a name="//apple_ref/objc/Class/SBSDKSwissQRCodeDocumentField" class="dashAnchor"></a>
 
-    <a title="SBSDKIDCardPDF417DocumentField Class Reference"></a>
+    <a title="SBSDKSwissQRCodeDocumentField Class Reference"></a>
 
     <header class="header">
       <p class="header-col header-col--primary">
@@ -38,7 +38,7 @@
     <p class="breadcrumbs">
       <a class="breadcrumb" href="../index.html">ScanbotBarcodeScannerSDK for iOS Reference</a>
       <img class="carat" src="../img/carat.png" />
-      SBSDKIDCardPDF417DocumentField Class Reference
+      SBSDKSwissQRCodeDocumentField Class Reference
     </p>
 
     <div class="content-wrapper">
@@ -442,14 +442,14 @@
 
         <section class="section">
           <div class="section-content">
-            <h1>SBSDKIDCardPDF417DocumentField</h1>
+            <h1>SBSDKSwissQRCodeDocumentField</h1>
               <div class="declaration">
                 <div class="language">
-                  <pre class="highlight objective_c"><code><span class="k">@interface</span> <span class="nc">SBSDKIDCardPDF417DocumentField</span> <span class="p">:</span> <span class="nc">NSObject</span></code></pre>
+                  <pre class="highlight objective_c"><code><span class="k">@interface</span> <span class="nc">SBSDKSwissQRCodeDocumentField</span> <span class="p">:</span> <span class="nc">NSObject</span></code></pre>
 
                 </div>
               </div>
-            <p>ID card field description</p>
+            <p>A class describing one data field of a Swiss QR code.</p>
 
           </div>
         </section>
@@ -461,9 +461,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/c:objc(cs)SBSDKIDCardPDF417DocumentField(py)type"></a>
+                    <a name="/c:objc(cs)SBSDKSwissQRCodeDocumentField(py)type"></a>
                     <a name="//apple_ref/objc/Property/type" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKIDCardPDF417DocumentField(py)type">type</a>
+                    <a class="token" href="#/c:objc(cs)SBSDKSwissQRCodeDocumentField(py)type">type</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -471,7 +471,7 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Field type</p>
+                        <p>The fields type.</p>
 
                       </div>
                       <div class="declaration">
@@ -479,12 +479,12 @@
                         <div class="language">
                           <p class="aside-title">Objective-C</p>
                           <pre class="highlight objective_c"><code><span class="k">@property</span> <span class="p">(</span><span class="n">nonatomic</span><span class="p">,</span> <span class="n">assign</span><span class="p">,</span> <span class="n">unsafe_unretained</span><span class="p">,</span> <span class="n">readwrite</span><span class="p">)</span>
-    <span class="n"><a href="../Enums/SBSDKIDCardPDF417DocumentFieldType.html">SBSDKIDCardPDF417DocumentFieldType</a></span> <span class="n">type</span><span class="p">;</span></code></pre>
+    <span class="n"><a href="../Enums/SBSDKSwissQRCodeFieldType.html">SBSDKSwissQRCodeFieldType</a></span> <span class="n">type</span><span class="p">;</span></code></pre>
 
                         </div>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">var</span> <span class="nv">type</span><span class="p">:</span> <span class="kt"><a href="../Enums/SBSDKIDCardPDF417DocumentFieldType.html">SBSDKIDCardPDF417DocumentFieldType</a></span> <span class="p">{</span> <span class="k">get</span> <span class="k">set</span> <span class="p">}</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">var</span> <span class="nv">type</span><span class="p">:</span> <span class="kt"><a href="../Enums/SBSDKSwissQRCodeFieldType.html">SBSDKSwissQRCodeFieldType</a></span> <span class="p">{</span> <span class="k">get</span> <span class="k">set</span> <span class="p">}</span></code></pre>
 
                         </div>
                       </div>
@@ -494,9 +494,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/c:objc(cs)SBSDKIDCardPDF417DocumentField(py)value"></a>
+                    <a name="/c:objc(cs)SBSDKSwissQRCodeDocumentField(py)value"></a>
                     <a name="//apple_ref/objc/Property/value" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKIDCardPDF417DocumentField(py)value">value</a>
+                    <a class="token" href="#/c:objc(cs)SBSDKSwissQRCodeDocumentField(py)value">value</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -504,7 +504,7 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Field value</p>
+                        <p>The fields value.</p>
 
                       </div>
                       <div class="declaration">
@@ -526,9 +526,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/c:objc(cs)SBSDKIDCardPDF417DocumentField(py)typeHumanReadableString"></a>
+                    <a name="/c:objc(cs)SBSDKSwissQRCodeDocumentField(py)typeHumanReadableString"></a>
                     <a name="//apple_ref/objc/Property/typeHumanReadableString" class="dashAnchor"></a>
-                    <a class="token" href="#/c:objc(cs)SBSDKIDCardPDF417DocumentField(py)typeHumanReadableString">typeHumanReadableString</a>
+                    <a class="token" href="#/c:objc(cs)SBSDKSwissQRCodeDocumentField(py)typeHumanReadableString">typeHumanReadableString</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -536,15 +536,14 @@
                     <section class="section">
                       <div class="pointer"></div>
                       <div class="abstract">
-                        <p>Human-readable field type name</p>
+                        <p>Human-readable field type name.</p>
 
                       </div>
                       <div class="declaration">
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Objective-C</p>
-                          <pre class="highlight objective_c"><code><span class="k">@property</span> <span class="p">(</span><span class="n">nonatomic</span><span class="p">,</span> <span class="n">strong</span><span class="p">,</span> <span class="n">readonly</span><span class="p">)</span>
-    <span class="n">NSString</span> <span class="o">*</span><span class="n">_Nonnull</span> <span class="n">typeHumanReadableString</span><span class="p">;</span></code></pre>
+                          <pre class="highlight objective_c"><code><span class="k">@property</span> <span class="p">(</span><span class="n">nonatomic</span><span class="p">,</span> <span class="n">readonly</span><span class="p">)</span> <span class="n">NSString</span> <span class="o">*</span><span class="n">_Nonnull</span> <span class="n">typeHumanReadableString</span><span class="p">;</span></code></pre>
 
                         </div>
                         <div class="language">
