android barcode sdk release v1.5.1

--- a/barcode-scanner-sdk/android/index.html
+++ b/barcode-scanner-sdk/android/index.html
@@ -630,6 +630,15 @@ e.g. JPG files from the photo library or other sources.</p>
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h3 id="version-151-10-mar-2021">Version 1.5.1 (10 Mar 2021)</h3>
+<ul>
+  <li>⚠️ Breaking changes:
+    <ul>
+      <li>Removed barcode format <code class="highlighter-rouge">BarcodeFormat.MSI_PLESSEY</code></li>
+    </ul>
+  </li>
+</ul>
+
 <h3 id="version-150-22-feb-2021">Version 1.5.0 (22 Feb 2021)</h3>
 <ul>
   <li>🎉 New:
@@ -833,6 +842,7 @@ e.g. JPG files from the photo library or other sources.</p>
 <ul>
   <li>🚀 Improvements:
     <ul>
+      <li>Added new barcode format <code class="highlighter-rouge">BarcodeFormat.MSI_PLESSEY</code></li>
       <li>Minor bugfixes and improvements</li>
     </ul>
   </li>
