--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/xamarin/xamarin-forms.html" />
 <meta property="og:site_name" content="Scanbot SDK for Xamarin" />
 <script type="application/ld+json">
-{"headline":"Scanbot SDK for Xamarin","url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin-forms.html","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin-forms.html","headline":"Scanbot SDK for Xamarin","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/xamarin/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/xamarin/feed.xml" title="Scanbot SDK for Xamarin" /></head>
 <body><header class="site-header" role="banner">
@@ -487,6 +487,20 @@ If a scanned document has a lot white background, that will be considered a very
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarinforms---version-322-24-mar-2021">ScanbotSDK.Xamarin.Forms - Version 3.2.2 (24 Mar 2021)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>iOS: Fixed pathing issue introduced in latest Visual Studio build (<code class="highlighter-rouge">_CodeSignature</code> not found exception)</li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Upgraded <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> to v3.2.2</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms---version-321-15-feb-2021">ScanbotSDK.Xamarin.Forms - Version 3.2.1 (15 Feb 2021)</h4>
 <ul>
   <li>🐞 Bug fixes:
@@ -608,6 +622,20 @@ Optimized performance of the image processing for simple operations (rotate, cro
   <li>👉 Please also see:
     <ul>
       <li>The <a href="/documentation/xamarin/xamarin.html#releaseHistory">Changelog</a> of <code class="highlighter-rouge">ScanbotSDK.Xamarin</code></li>
+    </ul>
+  </li>
+</ul>
+
+<h4 id="scanbotsdkxamarinforms---version-204-24-mar-2021">ScanbotSDK.Xamarin.Forms - Version 2.0.4 (24 Mar 2021)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>iOS: Fixed pathing issue introduced in latest Visual Studio build (<code class="highlighter-rouge">_CodeSignature</code> not found exception)</li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Upgraded <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> to v2.0.4</li>
     </ul>
   </li>
 </ul>
