--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/xamarin/xamarin.html" />
 <meta property="og:site_name" content="Scanbot SDK for Xamarin" />
 <script type="application/ld+json">
-{"headline":"Scanbot SDK for Xamarin","url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin.html","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"https://scanbotsdk.github.io/documentation/xamarin/xamarin.html","headline":"Scanbot SDK for Xamarin","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/xamarin/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/xamarin/feed.xml" title="Scanbot SDK for Xamarin" /></head>
 <body><header class="site-header" role="banner">
@@ -1053,6 +1053,15 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarinforms---version-322-24-mar-2021">ScanbotSDK.Xamarin.Forms - Version 3.2.2 (24 Mar 2021)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>iOS: Fixed pathing issue introduced in latest Visual Studio build (<code class="highlighter-rouge">_CodeSignature</code> not found exception)</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin---version-321-15-feb-2021">ScanbotSDK.Xamarin - Version 3.2.1 (15 Feb 2021)</h4>
 <ul>
   <li>🐞 Bug fixes:
@@ -1230,6 +1239,15 @@ document scanning perform better and much smoother:
     <ul>
       <li>The <a href="https://github.com/doo/scanbot-sdk-example-android/wiki/Release-History">Changelog</a> of the native Scanbot Android SDK</li>
       <li>The <a href="https://scanbotsdk.github.io/documentation/ios/release-history.html">Changelog</a> of the native Scanbot iOS SDK</li>
+    </ul>
+  </li>
+</ul>
+
+<h4 id="scanbotsdkxamarin---version-204-24-mar-2021">ScanbotSDK.Xamarin - Version 2.0.4 (24 Mar 2021)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>iOS: Fixed pathing issue introduced in latest Visual Studio build (<code class="highlighter-rouge">_CodeSignature</code> not found exception)</li>
     </ul>
   </li>
 </ul>
