fix wrong Xamarin version

--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -1053,7 +1053,7 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
-<h4 id="scanbotsdkxamarinforms---version-322-24-mar-2021">ScanbotSDK.Xamarin.Forms - Version 3.2.2 (24 Mar 2021)</h4>
+<h4 id="scanbotsdkxamarin---version-322-24-mar-2021">ScanbotSDK.Xamarin - Version 3.2.2 (24 Mar 2021)</h4>
 <ul>
   <li>🐞 Bug fixes:
     <ul>
