Update Barcode iOS SDK docs for release v1.10.0.

--- a/barcode-scanner-sdk/ios/installation.html
+++ b/barcode-scanner-sdk/ios/installation.html
@@ -452,9 +452,9 @@ architectures, bitcode and crash symbols. It can be used with Objective-C as wel
 
 <p>Please find the Scanbot Barcode Scanner SDK downloads below.</p>
 
-<p>Standard framework for iOS: <a href="https://download.scanbot.io/barcode-scanner-sdk/ios/scanbot-ios-barcode-scanner-sdk%7BSDK_DOWNLOAD_VERSION%7D.zip">Download</a></p>
+<p>Standard framework for iOS: <a href="https://download.scanbot.io/barcode-scanner-sdk/ios/scanbot-ios-barcode-scanner-sdk1.10.0.zip">Download</a></p>
 
-<p>XCFramework for iOS: <a href="https://download.scanbot.io/barcode-scanner-sdk/ios/xcframeworks/scanbot-ios-barcode-scanner-sdk-xcframework-%7BSDK_DOWNLOAD_VERSION%7D.zip">Download</a></p>
+<p>XCFramework for iOS: <a href="https://download.scanbot.io/barcode-scanner-sdk/ios/xcframeworks/scanbot-ios-barcode-scanner-sdk-xcframework-1.10.0.zip">Download</a></p>
 
 <ul>
 <li><a href="#install-cocoapods"><strong>Guide to install with CocoaPods</strong></a></li>
