update Android Barcode SDK v1.7.0

--- a/barcode-scanner-sdk/android/index.html
+++ b/barcode-scanner-sdk/android/index.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/" />
 <meta property="og:site_name" content="Scanbot Barcode Scanner SDK for Android" />
 <script type="application/ld+json">
-{"url":"https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/","headline":"Scanbot Barcode Scanner SDK for Android","name":"Scanbot Barcode Scanner SDK for Android","@type":"WebSite","@context":"https://schema.org"}</script>
+{"url":"https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/","name":"Scanbot Barcode Scanner SDK for Android","@type":"WebSite","headline":"Scanbot Barcode Scanner SDK for Android","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/documentation/barcode-scanner-sdk/android/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/feed.xml" title="Scanbot Barcode Scanner SDK for Android" /></head>
 <body><header class="site-header" role="banner">
@@ -629,6 +629,22 @@ e.g. JPG files from the photo library or other sources.</p>
 
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
+
+<h3 id="version-170-21-apr-2021">Version 1.7.0 (21 Apr 2021)</h3>
+<ul>
+  <li>🎉 New:
+    <ul>
+      <li>Added a new option <code class="highlighter-rouge">setOpticalZoomRange(zoomRange: ZoomRange)</code> in <code class="highlighter-rouge">IScanbotCameraView</code></li>
+      <li>Added two new options <code class="highlighter-rouge">setCameraZoomFactor(zoomFactor: Float)</code> and <code class="highlighter-rouge">setCameraZoomRange(zoomRange: ZoomRange)</code> in <code class="highlighter-rouge">BarcodeScannerConfiguration</code> for <code class="highlighter-rouge">BarcodeScannerActivity</code> RTU screen</li>
+      <li>Added <code class="highlighter-rouge">gs1DecodingEnabled</code> parameter in <code class="highlighter-rouge">BarcodeScannerAdditionalConfig</code> and <code class="highlighter-rouge">BarcodeScannerAdditionalConfiguration</code> to disable the decoding of FNC1 characters in CODE128 barcodes</li>
+    </ul>
+  </li>
+  <li>🚀 Improvements:
+    <ul>
+      <li>Initialization parameters for <code class="highlighter-rouge">AESEncryptedFileIOProcessor</code> (<code class="highlighter-rouge">key: SecretKey?</code>, <code class="highlighter-rouge">initializationVector: ByteArray</code>, <code class="highlighter-rouge">salt: ByteArray</code> and <code class="highlighter-rouge">iterationCount: Int</code>) became public.</li>
+    </ul>
+  </li>
+</ul>
 
 <h3 id="version-160-29-mar-2021">Version 1.6.0 (29 Mar 2021)</h3>
 <ul>
