--- a/barcode-scanner-sdk/react-native/index.html
+++ b/barcode-scanner-sdk/react-native/index.html
@@ -1026,8 +1026,10 @@ It allows you to create and distribute dedicated and smaller APKs via the
   </li>
   <li>🚙 Under the hood:
     <ul>
-      <li>Updated Android Scanbot Barcode SDK to version 1.7.0</li>
-      <li>Updated iOS Scanbot Barcode SDK to version 1.11.0</li>
+      <li>Updated Android Scanbot Barcode SDK to version 1.7.0
+  (cf. <a href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/#releaseHistory">changelog</a>)</li>
+      <li>Updated iOS Scanbot Barcode SDK to version 1.11.0
+  (cf. <a href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/ios/release-history.html">changelog</a>)</li>
     </ul>
   </li>
 </ul>
