xamarin: v3.4.0 release notes

--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -528,6 +528,23 @@ If a scanned document has a predominantly white background, it will be considere
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarin---version-340-21-may-2021">ScanbotSDK.Xamarin - Version 3.4.0 (21 May 2021)</h4>
+
+<ul>
+  <li>🚀 Improvements:
+    <ul>
+      <li>Droid: Improved <code class="highlighter-rouge">ImageSource</code> loading performance</li>
+      <li>Droid: Preview generation fix</li>
+      <li>Functions to decrypt preview images: <code class="highlighter-rouge">await DecryptedOriginalPreview</code> &amp; <code class="highlighter-rouge">await DecryptedDocumentPreview</code></li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Upgraded <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> to v3.4.0</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms---version-331-16-apr-2021">ScanbotSDK.Xamarin.Forms - Version 3.3.1 (16 Apr 2021)</h4>
 <ul>
   <li>🐞 Bug fixes:
