--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -1106,6 +1106,34 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarin---version-340-21-may-2021">ScanbotSDK.Xamarin - Version 3.4.0 (21 May 2021)</h4>
+
+<ul>
+  <li>⚠️ Breaking changes:
+    <ul>
+      <li><code class="highlighter-rouge">capturingFrameAspectRatio</code> renamed to <code class="highlighter-rouge">finderAspectRatio</code>, 
+<code class="highlighter-rouge">capturingFrameMinimumInset</code> renamed to <code class="highlighter-rouge">finderMinimumInset</code>.</li>
+      <li>Removed <code class="highlighter-rouge">SBSDKUIMachineCodeScannerConfiguration</code> and related configurations. 
+<code class="highlighter-rouge">SBSDKUIMRZScannerViewController</code> now takes <code class="highlighter-rouge">SBSDKUIMRZScannerConfiguration</code> 
+and <code class="highlighter-rouge">SBSDKUIBarcodeScannerViewController</code> takes <code class="highlighter-rouge">SBSDKUIBarcodeScannerConfiguration</code></li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Android: Upgraded the native Scanbot Android SDK to <strong>v1.82.0</strong></li>
+      <li>iOS: Upgraded the native Scanbot iOS SDK to <strong>v1.16.0</strong></li>
+    </ul>
+  </li>
+  <li>👉 Please also see:
+    <ul>
+      <li>The <a href="https://github.com/doo/scanbot-sdk-example-android/wiki/Release-History">Changelog</a>
+ of the native Scanbot Android SDK</li>
+      <li>The <a href="https://scanbotsdk.github.io/documentation/ios/release-history.html">Changelog</a>
+ of the native Scanbot iOS SDK</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin---version-331-16-apr-2021">ScanbotSDK.Xamarin - Version 3.3.1 (16 Apr 2021)</h4>
 <ul>
   <li>🐞 Bug fixes:
