React Native minor update

--- a/react-native/index.html
+++ b/react-native/index.html
@@ -2900,6 +2900,7 @@ We recommend copying, moving or deleting the files you get from callbacks to an 
   <li><code class="highlighter-rouge">RSS_EXPANDED</code> - Identifies a RSS_EXPANDED barcode</li>
   <li><code class="highlighter-rouge">UPC_A</code> - Identifies a UPC_A barcode</li>
   <li><code class="highlighter-rouge">UPC_E</code> - Identifies a UPC_E barcode</li>
+  <li><code class="highlighter-rouge">MSI_PLESSEY</code> - Identifies a MSI_PLESSEY barcode</li>
   <li><code class="highlighter-rouge">UNKNOWN</code> - Identifies a barcode type that has not been recognized or is not available</li>
 </ul>
 
@@ -3129,7 +3130,7 @@ please add the following rules:</p>
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history">Release History</h3>
 
-<h4 id="version-480-28-jun-2021">Version 4.8.0 (28 Jun 2021):</h4>
+<h4 id="version-480-25-jun-2021">Version 4.8.0 (25 Jun 2021):</h4>
 <ul>
   <li>🎉 New:
     <ul>
