React Native Barcode SDK 1.1.1 - Added DOC

--- a/barcode-scanner-sdk/react-native/index.html
+++ b/barcode-scanner-sdk/react-native/index.html
@@ -987,6 +987,17 @@ It allows you to create and distribute dedicated and smaller APKs via the
 
 <h2 id="release-history-and-changelog">Release History and Changelog</h2>
 
+<h4 id="version-111-1-july-2021">Version 1.1.1 (1 July 2021):</h4>
+
+<ul>
+  <li>🚀 Improvements:
+    <ul>
+      <li>Changes to .podspec to support react-native 0.63+’s new dependency management system</li>
+      <li>All configuration and result imports are now available from package root</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="version-110-4-may-2021">Version 1.1.0 (4 May 2021):</h4>
 
 <ul>
@@ -1026,10 +1037,8 @@ It allows you to create and distribute dedicated and smaller APKs via the
   </li>
   <li>🚙 Under the hood:
     <ul>
-      <li>Updated Android Scanbot Barcode SDK to version 1.7.0
-  (cf. <a href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/android/#releaseHistory">changelog</a>)</li>
-      <li>Updated iOS Scanbot Barcode SDK to version 1.11.0
-  (cf. <a href="https://scanbotsdk.github.io/documentation/barcode-scanner-sdk/ios/release-history.html">changelog</a>)</li>
+      <li>Updated Android Scanbot Barcode SDK to version 1.7.0</li>
+      <li>Updated iOS Scanbot Barcode SDK to version 1.11.0</li>
     </ul>
   </li>
 </ul>
