Update iOS SDK docs for release v1.19.1.

--- a/ios/release-history.html
+++ b/ios/release-history.html
@@ -1660,7 +1660,10 @@
 
 <ul>
 <li>The ScanbotSDK CocoaPod now contains an XCFramework instead of a standard framework, you may need to update CocoaPods and/or Xcode</li>
-<li>🚙 Under the hood:</li>
+</ul></li>
+<li><p>🚙 Under the hood:</p>
+
+<ul>
 <li>New third-party libraries: xsimd, xtl und xtensor (see <a href="third-party-components.html">Third party components</a>)</li>
 </ul></li>
 </ul>
